--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 # Agent ingestion state
-state
+state/
 # Folder for result news leads
-insights
-
+insights/
+# Output files
+output/
