--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+LLM_CLIENT=YOUR_LLM_CLIENT_MODEL_NAME
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+GROQ_API_KEY=YOU_GROQ_API_KEY
+FIREWORKS_API_KEY=YOUR_FIREWORKS_API_KEY
 SMTP_SERVER=YOUR_SMTP_SERVER
 SMTP_PORT_SSL=YOUR_SMTP_PORT_SSL
 SMTP_USER=YOUR_SMTP_USER
