--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LLM_CLIENT=YOUR_LLM_CLIENT_MODEL_NAME
+LLM_CLIENT=YOUR_LLM_CLIENT_MODEL_NAME # examples: accounts/fireworks/models/llama-v3p1-405b-instruct, gpt-4-turbo
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY
 GROQ_API_KEY=YOU_GROQ_API_KEY
 FIREWORKS_API_KEY=YOUR_FIREWORKS_API_KEY
